@@ -24,6 +24,7 @@ NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b6
 - Escape custom values in 'customvariablestatus' and 'customvariables'
 - Fix ndomod doesn't execute rotate_command propperly
 - Fix several compiler warnings
+- Rewrite ndo2db init script, install it with 'make install-init'
 
 1.4b7 - 10/31/2007
 -----------------
